--- a/templates/home.html
+++ b/templates/home.html
@@ -154,7 +154,7 @@
         </div>
 
         <div class="button-container">
-            <a href="/index" class="study-btn quick-revision">
+            <a href="/try" class="study-btn quick-revision">
                 <span class="icon">⚡</span>
                 <span>Quick Revision</span>
                 <span class="description">Get concise notes, formulas, and quick tests</span>
