--- a/templates/general_mindmap.html
+++ b/templates/general_mindmap.html
@@ -110,7 +110,7 @@
     </div>
 </div>
 {% endif %}
-<div><h2>CRTL + SCROLL : for zoom in or zoom out</h2></div>
+<div><h4>CTRL + SCROLL : for zoom in or zoom out</h4></div>
 <script>
     const mindMapDataRaw = {{ mind_map | default([]) | tojson | safe }};
 
