--- a/templates/minmap.html
+++ b/templates/minmap.html
@@ -128,7 +128,7 @@
 </head>
 <body>
 
-<h1>📚 Smart Study Material Generator</h1>
+<h1>Syllabyte</h1>
 
 <!-- <form method="POST" action="/generate">
     <input type="text" name="topic" placeholder="Enter a topic..." value="{{ topic or '' }}">
